<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">techtile</string>
    <string name="title_activity_details">MainActivity</string>
    <string name="title_explore">Explore</string>
    <string name="title_home">For You</string>
    <string name="title_dashboard">Wallet</string>
    <string name="title_notifications">Profile</string>
    <string name="username_textview">Username</string>
    <string name="username_placeholder">Username (min 5 characters)</string>
    <string name="email_textview">Email Address</string>
    <string name="email_placeholder">mail@mail.com</string>
    <string name="password_textview">Password</string>
    <string name="password_placeholder">8 character password</string>
    <string name="create_account_button">Create Account</string>
    <string name="login_button">Log In</string>
    <string name="create_account_or">OR</string>
    <string name="facebook_register_button">Continue with Facebook</string>
    <string name="gmail_register_button">Continue with Gmail</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_to_log_in">Log in.</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="log_in_to_sign_up">Sign Up!</string>
    <string name="facebookToast">This button is not implemented yet! For Facebook</string>
    <string name="gmailToast">This button is not implemented Yet! For Gmail</string>
    <string name="sign_up_emptyToast">Username, Email and Password can not be empty!</string>
    <string name="login_emptyToast">Email and Password can not be empty!</string>
    <string name="create_account_toast">Account has been created succesfully! You can log in.</string>
    <string name="login_toast">Logged in succesfully!</string>
    <string name="login_fail">Incorrect mail or password.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="events_you_might_like">Events you might like</string>
    <string name="because_you_have_attended">Because you have attended Techno Bunker</string>
    <string name="your_friends_are_interested_in">Your friends are interested in</string>
    <string name="event_name">Grand Opening</string>
    <string name="event_vip">VIP ONLY</string>
    <string name="event_day">14</string>
    <string name="event_month">FEB</string>
    <string name="event_location">Main Stage - Ushuaia</string>
    <string name="event_rating">4.8</string>
    <string name="event_desc">This party is your great opportunity to meet the world-famous artist fr...</string>
    <string name="btn_check_in">Check-In</string>
    <string name="btn_guaranteed_entry">Get Guaranteed Entry</string>
    <string name="navigation_for_you">For you</string>
    <string name="navigation_wallet">Wallet</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_explore">Explore</string>
    <string name="overview_tab">Overview</string>
    <string name="photos_tab">Photos</string>
    <string name="guest_list_tab">Guest List</string>
    <string name="interested_checkbox">Interested</string>
</resources>