<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_for_you">

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.techtile.ui.explore.Explore"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_for_you"
        android:name="com.example.techtile.ui.for_you.ForYouFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_for_you">

        <action
            android:id="@+id/action_navigation_for_you_to_selectedEventFragment"
            app:destination="@id/selectedEventFragment" />

    </fragment>

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.example.techtile.ui.wallet.WalletFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.techtile.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/selectedEventFragment"
        android:name="com.example.techtile.SelectedEventFragment"
        android:label="fragment_selected_event"
        tools:layout="@layout/fragment_selected_event" />

</navigation>