<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".SignUp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gmail_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bordered_register_buttons"
        android:paddingVertical="16dp"
        android:text="@string/gmail_register_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_register_button" />

    <View
        android:layout_width="130dp"
        android:layout_height="2dp"
        android:background="#E3E4EF"
        app:layout_constraintBottom_toTopOf="@+id/facebook_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.603" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebook_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bordered_register_buttons"
        android:paddingVertical="16dp"
        android:text="@string/facebook_register_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:padding="10dp"
        android:text="@string/already_have_an_account"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup_to_login"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintLeft_toLeftOf="@+id/signup_to_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gmail_register_button"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/password_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="256dp"
        android:layout_marginRight="65dp"
        android:text="@string/password_textview"
        android:textColor="#8B8B9C"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/circular_area"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        android:paddingVertical="16dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:shadowColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_or"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/facebook_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.684" />

    <TextView
        android:id="@+id/signup_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/sign_up_to_log_in"
        android:textColor="@color/button_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gmail_register_button"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/email_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="148dp"
        android:layout_marginRight="65dp"
        android:text="@string/email_textview"
        android:textColor="#8B8B9C"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mail_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/circular_area"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/email_placeholder"
        android:inputType="textPersonName"
        android:paddingVertical="16dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="44dp"
        android:layout_marginRight="65dp"
        android:text="@string/username_textview"
        android:textColor="#8B8B9C"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circular_area"
        android:elevation="2dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingVertical="16dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:hint="@string/username_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/email_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/circular_area"
        android:backgroundTint="@color/button_color"
        android:paddingVertical="16dp"
        android:text="@string/create_account_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext"
        app:layout_constraintVertical_bias="0.121" />

    <View
        android:layout_width="130dp"
        android:layout_height="2dp"
        android:background="#E3E4EF"
        app:layout_constraintBottom_toTopOf="@+id/facebook_register_button"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.603" />




</androidx.constraintlayout.widget.ConstraintLayout>