<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    tools:context=".viewPagerFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/event_background"
        android:backgroundTint="#F7F8FE"
        app:cardCornerRadius="50dp">

        <TextView
            android:id="@+id/vip_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/circular_area"
            android:paddingLeft="22dp"
            android:paddingTop="12dp"
            android:paddingRight="22dp"
            android:paddingBottom="12dp"
            android:text="@string/event_vip"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:translationZ="1dp" />

        <RelativeLayout
            android:id="@+id/event_date_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="260dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/circular_date_area"
            android:paddingHorizontal="18dp"
            android:paddingVertical="10dp"
            android:translationZ="1dp">

            <TextView
                android:id="@+id/event_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/event_day"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/event_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/event_month"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <ImageView
            android:id="@+id/event_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/event_img">

        </ImageView>


        <TextView
            android:id="@+id/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="280dp"
            android:text="@string/event_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/event_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="280dp"
            android:background="@drawable/rating_background"
            android:paddingHorizontal="10dp"
            android:paddingVertical="7dp"
            android:gravity="center_vertical"
            android:text="@string/event_rating"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@android:drawable/star_big_on" />

        <TextView
            android:id="@+id/event_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="340dp"
            android:text="@string/event_location"
            android:textColor="#888888"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/outline_place_24"
            app:drawableStartCompat="@drawable/outline_place_24" />

    </androidx.cardview.widget.CardView>
</FrameLayout>
