<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/login_password_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="164dp"
        android:layout_marginRight="65dp"
        android:text="@string/password_textview"
        android:textColor="#8B8B9C"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_email_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="56dp"
        android:layout_marginRight="65dp"
        android:text="@string/email_textview"
        android:textColor="#8B8B9C"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_mail_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/circular_area"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/email_placeholder"
        android:inputType="textPersonName"
        android:paddingVertical="16dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/circular_area"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        android:paddingVertical="16dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:shadowColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/circular_area"
        android:backgroundTint="@color/button_color"
        android:paddingVertical="16dp"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_edittext"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_or"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_facebook_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.505" />

    <View
        android:layout_width="130dp"
        android:layout_height="2dp"
        android:background="#E3E4EF"
        app:layout_constraintBottom_toTopOf="@+id/login_facebook_register_button"
        app:layout_constraintEnd_toStartOf="@+id/login_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <View
        android:layout_width="130dp"
        android:layout_height="2dp"
        android:background="#E3E4EF"
        app:layout_constraintBottom_toTopOf="@+id/login_facebook_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_textView"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_facebook_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bordered_register_buttons"
        android:paddingVertical="16dp"
        android:text="@string/facebook_register_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_gmail_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bordered_register_buttons"
        android:paddingVertical="16dp"
        android:text="@string/gmail_register_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_facebook_register_button" />
</androidx.constraintlayout.widget.ConstraintLayout>
